objects/JBCXM__GSSurveyTextAnalytics__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__AspectGroup__c</fullName>
        <label>AspectGroup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Aspect__c</fullName>
        <label>Aspect</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RunDate__c</fullName>
        <label>RunDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__SentenceCategory__c</fullName>
        <label>Sentence Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Suggestion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__SentenceId__c</fullName>
        <label>Sentence Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Sentence__c</fullName>
        <label>Sentence</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyUserAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey User Answer</label>
        <referenceTo>JBCXM__SurveyUserAnswer__c</referenceTo>
        <relationshipLabel>Survey Text Analytics Answer</relationshipLabel>
        <relationshipName>Survey_Text_Analytics_Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SurveyUserComment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey User Comment</label>
        <referenceTo>JBCXM__SurveyUserAnswer__c</referenceTo>
        <relationshipLabel>Survey Text Analytics Comment</relationshipLabel>
        <relationshipName>Survey_Text_Analytics_Comment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Text Analytics</label>
    <nameField>
        <label>Survey Text Analytics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Text Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>